# align

./: .ctags  .gitignore  .playground.align.swp  CLAUDE.md  Cargo.toml  HANDOFF.md  README.ja.md  README.md  RELEASE_NOTES_0.1.0.md  RELEASE_NOTES_0.2.0.md  RELEASE_NOTES_0.3.0.md  align.gpg  draft.md  find_as_usize.py  fix_runtime.py  fix_try_from.py  install.sh  main  pr_body.txt  scratch.rs  test_fixes.sh  test_reduce.align  vstore
.cargo/: config.toml
.github/: align.rb.template  install.sh
.github/workflows/: ci.yml  release.yml
bench/: README.md  harness.rs  kernels.align  run.sh
bench/adaptive_sort/: .gitignore  Cargo.toml  README.md  build.rs  kernel.align  run.sh
bench/arena_pool/: Cargo.toml  README.md  run.sh
bench/arena_pool/src/: main.rs
bench/binary_size/: README.md  lib.sh  profiles.sh  run.sh
bench/buffer_donate/: Cargo.toml  build.rs  kernel.align  run.sh
bench/clang_ir_compare/: README.md  run.sh
bench/deep_pipeline/: README.md  controls.c  harness.rs  kernels.align  run.sh
bench/group_by/: Cargo.toml  README.md  build.rs  kernel.align  run.sh
bench/group_by_reuse/: .gitignore  Cargo.toml  README.md  build.rs  kernel.align  run.sh
bench/http_client/: Cargo.toml  README.md  run.sh
bench/http_client/src/: main.rs
bench/http_client_path/: Cargo.toml  README.md  run.sh
bench/http_client_path/src/: main.rs
bench/http_path/: Cargo.toml  README.md  run.sh
bench/http_path/src/: main.rs
bench/json_decode/: Cargo.toml  README.md  kernel.align  run.sh
bench/json_soa/: Cargo.toml  README.md  build.rs  kernel.align  run.sh
bench/json_soa/src/: main.rs
bench/needle_hoist/: Cargo.toml  README.md  build.rs  kernel.align  run.sh
bench/par_map/: Cargo.toml  README.md  build.rs  kernel.align  run.sh
bench/rt_lto/: Cargo.toml  README.md  build.rs  kernel.align  run.sh
bench/string_builder/: Cargo.toml  README.md  build.rs  kernel.align  run.sh
bench/web_e2e/: Cargo.toml  README.md  run.sh
bench/web_router/: Cargo.toml  README.md  build.rs  run.sh
crates/align_ast/: Cargo.toml
crates/align_codegen_llvm/: Cargo.toml  build.rs
crates/align_codegen_llvm/cpp/: thinlto_shim.cpp
crates/align_codegen_llvm/src/: lib.rs  pgo.rs  pgo_spike.rs  thinlto.rs  thinlto_spike.rs
crates/align_diag/: Cargo.toml
crates/align_driver/: Cargo.toml  build.rs
crates/align_driver/src/: cache.rs  explain.rs  lib.rs  main.rs  size.rs
crates/align_driver/tests/: align_attr.rs  aligned_binding.rs  analysis_coverage.rs  apps_jwt.rs  apps_web_cookie.rs  apps_web_cors.rs  apps_web_multipart.rs  apps_web_prefork.rs  apps_web_query.rs  apps_web_root.rs  apps_web_router.rs  apps_web_serve.rs  apps_web_stream.rs  apps_web_validate.rs  array_materialize.rs  artifact_staging.rs  bitwise.rs  borrow_liveness.rs  branchless_where.rs  buffer_donate.rs  build_profiles.rs  build_target.rs  cache_codegen.rs  cache_parallel.rs  capability_linking.rs  checked_arith.rs  chunks.rs  clang_ir_compare.rs  const_pool.rs  const_pool_probe.rs  constants.rs  constants_aggregate.rs  copy_collection_enablers.rs  cross_module_types.rs  deep_pipeline.rs  diagnostics_quality.rs  div_guard.rs  else_result.rs  emit_llvm_stage.rs  enum_match.rs  (+115 more)
crates/align_driver/tests/common/: mod.rs
crates/align_fmt/: Cargo.toml
crates/align_hash/: Cargo.toml
crates/align_hash/src/: lib.rs
crates/align_interface/: Cargo.toml
crates/align_interface/src/: codec.rs  hash.rs  lib.rs
crates/align_interface/tests/: effect_fail_closed.rs  summary.rs
crates/align_lexer/: Cargo.toml
crates/align_mir/: Cargo.toml
crates/align_mir/src/: lib.rs  print.rs
crates/align_parser/: Cargo.toml
crates/align_runtime/: Cargo.toml
crates/align_runtime/examples/: profile_decode.rs
crates/align_runtime/src/: lib.rs  str_prims.rs
crates/align_runtime/tests/: par_map_cold_start.rs
crates/align_sema/: Cargo.toml
crates/align_span/: Cargo.toml
dists/stable/: InRelease  Release  Release.gpg
docs/: design-notes.md  history.md  language-spec.md  non-goals.md  open-questions.md
docs/guide/: 00-why-align.md  01-first-program.md  01-getting-started.md  02-language-basics.md  02-pipelines.md  03-memory.md  03-modeling-data.md  04-data-oriented.md  04-errors.md  05-memory.md  05-the-align-way.md  06-pipelines.md  07-strings-and-text.md  08-json.md  09-generics-and-modules.md  10-closures-and-parallelism.md  11-data-oriented.md  12-simd.md  13-std-os.md  14-std-encoding-rand-cli.md  15-unsafe-and-ffi.md  16-toolchain.md  17-the-align-way.md  18-std-services.md  23-packages.md  (+5 more)
examples/: align_attr.align  aligned_load.align  arena.align  arraysum.align  bitwise.align  cast.align  checked_arith.align  chunk_parallel.align  chunks.align  circle.align  constants.align  employees.align  enum_match.align  error_enum.align  error_type.align  ffi.align  ffi_link.align  ffi_views.align  file_copy.align  fn_values.align  generic_struct.align  generic_sum_type.align  generics.align  hash.align  hello.align  higher_order.align  huge_struct_copy.align  io_copy.align  json.align  json_decode.align  json_nested.align  lambda.align  layout_c.align  map_err.align  match_option_result.align  min.align  option.align  or_pattern.align  out_param.align  owned_array.align  (+37 more)
ll_out/: align_attr.align.ll  aligned_load.align.ll  arena.align.ll  arraysum.align.ll  bitwise.align.ll  cast.align.ll  checked_arith.align.ll  chunk_parallel.align.ll  chunks.align.ll  circle.align.ll  constants.align.ll  employees.align.ll  enum_match.align.ll  error_enum.align.ll  error_type.align.ll  ffi.align.ll  ffi_link.align.ll  ffi_views.align.ll  file_copy.align.ll  fn_values.align.ll  generic_struct.align.ll  generic_sum_type.align.ll  generics.align.ll  hash.align.ll  hello.align.ll  higher_order.align.ll  huge_struct_copy.align.ll  io_copy.align.ll  json.align.ll  json_decode.align.ll  lambda.align.ll  layout_c.align.ll  map_err.align.ll  match_option_result.align.ll  min.align.ll  option.align.ll  or_pattern.align.ll  out_param.align.ll  owned_array.align.ll  par_map.align.ll  (+35 more)
xu/: cfg.align  cfg2.align  main.align  main2.align
(+185 files in other folders)
