[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

# Workspace for the Align compiler (alignc).
# IR boundary = crate boundary (docs/impl/00-overview.md).
# Pipeline: align_lexer -> align_parser -> align_sema -> align_mir
#           -> align_codegen_llvm -> (linked with align_runtime)
# Cross-cutting: align_span / align_diag
