[package]
name = "http-path-bench"
version = "0.0.0"
edition = "2021"
publish = false

# Detached from the parent Align workspace, but depends on `align_runtime` as a RUST LIB (not the
# cdylib): that is the whole point. A `#[global_allocator]` here then intercepts the runtime's own
# `Vec`/`String` traffic on the request path, which a C-ABI boundary would hide.
[workspace]

[dependencies]
align_runtime = { path = "../../crates/align_runtime" }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
