[package]
name = "http-path-bench"
version = "0.0.0"
edition = "2021"
publish = false

# Detached from the parent Align workspace, but depends on `align_runtime` as a RUST LIB (not the
# cdylib): that is the whole point. A `#[global_allocator]` here then intercepts the runtime's own
# `Vec`/`String` traffic on the request path, which a C-ABI boundary would hide.
[workspace]

[dependencies]
align_runtime = { path = "../../crates/align_runtime" }

# **Deliberately the DEFAULT release profile**, not an LTO'd one. The compiler links the shipped
# `libalign_runtime.a`, which is built with the workspace's default release settings (no LTO,
# 16 codegen units) and is called across a real C-ABI boundary. Turning LTO on here let the harness
# inline `align_rt_http_rb_header` into its caller and const-fold the header validation, reading
# ~2.8% faster than what ships — a systematic bias the size of the harness's own noise.
[profile.release]
opt-level = 3
