[package]
name = "json-soa-bench"
version = "0.0.0"
edition = "2021"
publish = false

# Detach from the parent Align workspace so the serde dev-deps stay isolated from the compiler crates.
[workspace]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
