[package]
name = "align_codegen_llvm"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
align_mir = { path = "../align_mir" }
align_sema = { path = "../align_sema" }
align_ast = { path = "../align_ast" }
inkwell = { version = "0.9", features = ["llvm19-1"] }
# Add prefer-dynamic to the llvm-sys (191.x) that inkwell uses, forcing dynamic
# linking against libLLVM-19.so (Debian llvm-19 lacks static components like libPolly.a).
llvm-sys = { version = "191", features = ["prefer-dynamic"] }

[dev-dependencies]
align_diag = { path = "../align_diag" }
align_lexer = { path = "../align_lexer" }
align_parser = { path = "../align_parser" }
