[package]
name = "align_codegen_llvm"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
align_mir = { path = "../align_mir" }
align_sema = { path = "../align_sema" }
align_ast = { path = "../align_ast" }
align_hash = { path = "../align_hash" }
inkwell = { version = "0.9", features = ["llvm22-1"] }
# Add prefer-dynamic to the llvm-sys (221.x) that inkwell uses, forcing dynamic
# linking against libLLVM-22.so. The apt.llvm.org llvm-22 packages DO ship the static
# archives (Polly is no longer a separate `--libs` component in LLVM 22), so a static
# build is now possible — but we keep dynamic linking: it is smaller to link, matches the
# rustc-side toolchain, and avoids re-litigating the archive set. See .cargo/config.toml.
llvm-sys = { version = "221", features = ["prefer-dynamic"] }
libc = { version = "0.2", optional = true }

[build-dependencies]
cc = "1"

[features]
# ThinLTO S0 feasibility spike. OFF by default: enabling it makes build.rs
# compile the C++ shim (cpp/thinlto_shim.cpp), which requires the LLVM 22 C++
# headers (llvm-22-dev, already a workspace prerequisite) and llvm-config-22 on
# PATH. Normal builds are unaffected.
thinlto-spike = ["dep:libc"]

[dev-dependencies]
align_diag = { path = "../align_diag" }
align_lexer = { path = "../align_lexer" }
align_parser = { path = "../align_parser" }
