[package]
name = "align_mir"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
align_span = { path = "../align_span" }
align_sema = { path = "../align_sema" }
align_ast = { path = "../align_ast" }

[dev-dependencies]
align_diag = { path = "../align_diag" }
align_lexer = { path = "../align_lexer" }
align_parser = { path = "../align_parser" }
